# zzshare

./: .gitignore  .pypirc.example  LICENSE  MANIFEST.in  README.md  SKILL.md  __init__.py  cli_help.txt  client.py  pyproject.toml  setup.py  smithery.yaml  test_zzshare.py
.github/workflows/: workflow.yml
example/: probe_trade_days_simple.py  test_api_trade_days.py  test_zzshare.py
test/: client_test.py
zzshare/: __init__.py  ai_utils.py  cli.py  client.py  client.pyi  core.py  logger.py  mcp.py  utils.py
