[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zzshare"
version = "0.1.2"
description = "A股量化数据接口 SDK"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "zzquant" }
]
dependencies = [
  "requests>=2.25.0",
  "pandas>=1.3.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["zzshare*"]
exclude = ["test*"]

[tool.setuptools.package-data]
zzshare = ["*.pyi"]
